Initial power estimation for slope mode.
For a given a speed and slope, calculate the power that would be
required (based on data from analyticcycling.com). This can then
be used with the existing power and speed calculation to determine
the required resistance level.

--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@ software:
 
 firmware:
 
- - initial calibration attempt
+ - Refine calibration and resistance calculation
  - migrate to USB part
  - smooth realtime data before motor adjustment, currently a bit twitchy
  - add timeout to serial comms & support for disconnected (no PC) mode
